# cs244_pa3

./: .gitignore  README.md
updates/: ACL-to-CTL.hs  CTL.hs  README  acl.pml  config.sh  notes  plot-results.py  policy.py  print_smv.py  pseudocode  run.py  run.sh  run_all.sh  run_batch.sh  run_single.sh  stash  test.cc  time_trial.sh  tmp  todo.org  update.py  update.py~  update_app.py  update_lib.py  verification.py
updates/examples/: Makefile  Makefile~  README~  acl-nox2.py  acl-packet.py  acl-topo-nx.py  acl-topo-nx.py~  acl.py  acl_packet.py  acl_packet_topo.py  clique.py  clique_topo.py  connectivity_test.py  connectivity_test.py~  experiment_base.py~  experiment_base_routing.py  experiment_base_routing.py~  experiment_base_waxman.py  experiment_base_waxman.py~  fattree.py  fattree.py~  fattree2.py  fattree2_topo.py  fattree2_topo.py~  fattree_multicast.py  fattree_multicast.py~  fattree_topo.py  frenetic_run.py~  hub.py  hub_topo.py  hypercube.py  hypercube.py~  link-load.py  link-load.py~  load_balancer.py  load_balancer_topo.py  multicast.py  multicast_tester.py  multicast_topo.py  multicast_waxman.py  (+39 more)
updates/examples/loadwild/loadbalancer/lbtest/: Alphas.py  Arps.py  Bins.py  EvalRules.py  Globals.py  Globals_BACKUP.py  IPRules.py  IPRules_BACKUP.py  IPTransition.py  IPTransition_BACKUP.py  IPs.py  Makefile  Makefile.am  Makefile.in  Multipath.py  Multipath_BACKUP.py  Stats.py  lbtest.py  lbtest_BACKUP.py  meta.xml  test.py
updates/results/: master0312.txt  master_384.txt  table.html
updates/unittest/: unittest_policy.py  unittest_policy.py~  (+2 more)
(+90 files in other folders)
