include ../../../Make.vars 

EXTRA_DIST =\
	meta.xml\
	__init__.py\
	lbtest.py\
	Arps.py\
	IPs.py\
	EvalRules.py\
	Alphas.py\
	Globals.py\
	Bins.py\
	IPRules.py\
	IPTransition.py\
	Multipath.py\
        Stats.py

NOX_RUNTIMEFILES = meta.xml	\
	__init__.py		\
	lbtest.py		\
	Arps.py			\
	IPs.py			\
	EvalRules.py		\
	Alphas.py		\
	Globals.py		\
	Bins.py			\
	IPRules.py		\
	IPTransition.py		\
	Multipath.py		\
	Stats.py

all-local: nox-all-local
install-exec-hook: nox-install-local
